Bug 76719 - [IVB Regression]Piglit/spec_ARB_draw_indirect_arb_draw_indirect-draw-arrays fails
Summary: [IVB Regression]Piglit/spec_ARB_draw_indirect_arb_draw_indirect-draw-arrays f...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Damien Lespiau
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-28 06:34 UTC by lu hua
Modified: 2017-10-06 14:38 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (119.17 KB, text/plain)
2014-03-28 06:34 UTC, lu hua
no flags Details

Description lu hua 2014-03-28 06:34:30 UTC
Created attachment 96511 [details]
dmesg

System Environment:
--------------------------
Platform: Ivybridge
Libdrm:		(master)libdrm-2.4.52-10-g1cb5fc706cf5913d9dee33c939f65a23ecea17a5
Mesa:		(master)b02bcea7157020b01d5f4fdcb5da69c10013a818
Xserver:	(master)xorg-server-1.15.99.901-160-g7b2a517ba99f6756e98c4aef47d9b9399b997157
Xf86_video_intel:(master)2.99.911-10-ge46c196ecc8ad83f78f4f948b5dcb07906f249c2
Libva:		(staging)708ec2979b52647ce4744d181d964c413e98cc11
Libva_intel_driver:(staging)150f67c67bd92cd201b75a92388fe3a63b00cd8a
Kernel:	(drm-intel-nightly) 10c69add19dda3677219254d3e9dc3becbb60b97

Bug detailed description:
-----------------------------
It fails on Ivybridge with -queued and -nightly kernel, It works well on -fixes kernel.
Following cases also fail:
spec_ARB_draw_indirect_arb_draw_indirect-draw-arrays-base-instance
spec_ARB_draw_indirect_arb_draw_indirect-draw-arrays-instances
spec_ARB_draw_indirect_arb_draw_indirect-draw-elements
spec_ARB_draw_indirect_arb_draw_indirect-draw-elements-base-instance
spec_ARB_draw_indirect_arb_draw_indirect-draw-elements-prim-restart

The latest known good commit: 56da08b36ee58a58723fe1bfb5fbe624a7442689
The latest known bad commit:  1bf70dad78613afeedc7e8550bb140ef5a19a2f1


output:
intel_do_flush_locked failed: Invalid argument

Reproduce steps:
---------------------------- 
1. xinit
2. bin/arb_draw_indirect-draw-arrays -fbo -auto
Comment 1 Damien Lespiau 2014-03-28 12:02:58 UTC
Is it possible to bisect that easily on the failing branch? one of the big contender here is the command parser.
Comment 2 lu hua 2014-04-01 03:39:43 UTC
Bisect shows: 6d42f94084b8c69813d7ecd0466c33fe561bf127 is the first bad commit
commit 6d42f94084b8c69813d7ecd0466c33fe561bf127
Author: Brad Volkin <bradley.d.volkin@intel.com>
Date:   Tue Feb 18 10:15:57 2014 -0800

    drm/i915: Enable command parsing by default

    v2: rebased

    OTC-Tracker: AXIA-4631
    Change-Id: I6747457e1fe7494bd42787af51198fcba398ad78
    Signed-off-by: Brad Volkin <bradley.d.volkin@intel.com>
    Reviewed-by: Jani Nikula <jani.nikula@intel.com>
    [danvet: Resolve tiny conflict in module option text.]
    Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Comment 3 Daniel Vetter 2014-04-09 13:35:04 UTC
commit 4630e5c4d239eb35684e68fe494648c336e61624
Author: Brad Volkin <bradley.d.volkin@intel.com>
Date:   Tue Apr 8 14:18:58 2014 -0700

    drm/i915: Add more registers to the whitelist for mesa
Comment 4 lu hua 2014-04-11 00:50:42 UTC
Verified.Fixed.
Comment 5 Elizabeth 2017-10-06 14:38:58 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.